@@ -1178,6 +1178,9 @@ code{
   border:1px solid #e6e6e6;
   border-radius:0.25rem; }
 
+pre{
+  margin-top:0; }
+
 pre > code{
   padding:1rem 1.5rem;
   display:block;
